--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 
 :root{
@@ -68,6 +69,20 @@ header{
     color: #CCC;
 }
 
+.button{
+    display: inline-block;
+    background-color: var(--color-orange);
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
 .banner{
     height: calc(100vh - 100px);
     background-color: black;
@@ -114,20 +129,6 @@ header{
     margin-top: 20px;
 }
 
-.banner a{
-    display: block;
-    background-color: var(--color-orange);
-    color: white;
-    font-weight: 600;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 10px;
-    line-height: 20px;
-    padding: 10px 30px;
-    margin-top: 30px;
-    border-radius: 20px;
-}
-
 .banner .sliders-pointers{
     width: 100vw;
     height: 20px;
@@ -150,4 +151,210 @@ header{
 
 .banner .pointer.active{
     background-color: var(--color-orange);
+}
+
+.default{
+    width: 100vw;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.default .section-title,
+.default .section-desc{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.default .section-title{
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.default .section-desc{
+    font-size: 10px;
+    line-height: 20px;
+    color: #CCC;
+    margin-top: 10px;
+    margin-bottom: 40px;    
+}
+
+.default .section-body{
+    margin: auto;
+    max-width: 1140px;
+    min-height: 100px;
+}
+
+.default.light{
+    background-color: #F7F7F7;
+}
+
+.default.light .section-body,
+.default.light .section-title{
+    color: #000;
+}
+
+.default.dark{
+    background-color: black;
+}
+
+.default.dark .section-body,
+.default.dark .section-title{
+    color: white;
+}
+
+/*==  ==*/
+.section-aboutus{
+    display: flex;
+}
+
+.section-aboutus--left{
+    flex: 1;
+}
+
+.section-aboutus--left p{
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.section-aboutus--right{
+    width: 520px;
+    text-align: center;
+}
+
+.section-aboutus--right img{
+    width: 480px;
+    box-shadow: 0px 5px 10px #333;
+}
+
+/*== SECTION SERVICES ==*/
+.section-services{
+    display: flex;
+}
+
+.section-service{
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid #333;
+    padding: 15px;
+}
+
+.section-service:first-child{
+    border-left: 1px solid #333;
+}
+
+.section-service img{
+    width: 60px;
+    height: 60px;
+}
+
+.section-service h4{
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.section-service p{
+    margin-top: 10px;
+    font-size: 13px;
+    line-height: 23px;
+    color: #999;
+}
+
+/*== SECTION PROJECTS ==*/
+.section-projects{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-projects--filters{
+    border: 1px solid #CCC;
+    background-color: #EEE;
+    border-radius: 30px;
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.section-projects--filters ul,
+.section-projects--filters li{
+    list-style: none;
+}
+
+.section-projects--filters li{
+    display: inline-block;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 23px;
+    border-left: 1px solid #CCC;
+    color: #555;
+    border-bottom: 3px solid #EEE;
+    cursor: pointer;
+}
+
+.section-projects--filters li:hover,
+.section-projects--filters li.active{
+    border-bottom: 3px solid var(--color-orange);
+}
+
+.section-projects--filters li:first-child{
+    border-left: 0;
+}
+
+.section-project--photos{
+    width: 100vw;
+    max-width: 1140px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.section-project--photo{
+    width: 280px;
+}
+
+.section-projects--photoarea{
+    margin: 10px;
+    width: 260px;
+    height: 168px;
+    cursor: pointer;
+}
+
+.section-projects--photoarea img{
+    width: inherit;
+    height: 164px;
+}
+
+.section-projects--photoinfo{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: inherit;
+    height: 164px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: wheat;
+}
+
+.section-projects--photoinfo h5{
+    font-size: 22px;
+    line-height: 32px;
+    text-transform: uppercase;
+}
+
+.section-projects--photoinfo p{
+    font-size: 12px;
+    line-height: 22px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.section-projects--photoarea:hover .section-projects--photoinfo{
+    display: flex;
 }
