--- a/assets/style.css
+++ b/assets/style.css
@@ -629,3 +629,85 @@ header{
 .section-price--cards a:hover{
     background-color: var(--color-orange);
 }
+
+/*== section-premium ==*/
+.section-premium{
+    text-align: center;
+}
+
+.box-box{
+    max-width: 1114px;
+    display: flex;
+    flex-direction: row;
+}
+
+.premium-box{
+    width: 550px;
+    text-align: center;
+}
+
+.section-premium--box{
+    width: 360px;
+    height: 350px;
+}
+
+.section-premium--card{
+    display: flex;
+}
+
+.section-premium--texts{
+    display: flex;
+    flex-direction: column;
+}
+
+.section-premium--text-img{
+    width: 40px;
+    margin-right: 20px;
+}
+
+.section-premium--text h1{
+    font-size: 18px;
+    line-height: 28px;
+    text-transform: uppercase;
+    font-weight: 800;
+    text-align: left;
+}
+
+.section-premium--text p{
+    font-size: 12px;
+    line-height: 22px;
+    color: #7d7d7d;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.line{
+    display: block;
+    background-color: white;
+    width: 100%;
+    border-bottom: 1px solid #CCC;
+    margin-top: 30px;
+}
+
+.section-premium .sliders-pointers{
+    margin-top: 30px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.section-premium .pointer{
+    width: 16px;
+    height: 16px;
+    border: 2px solid var(--color-orange);
+    border-radius: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.section-premium .pointer.active{
+    background-color: var(--color-orange);
+}
