--- a/assets/style.css
+++ b/assets/style.css
@@ -857,3 +857,127 @@ header{
     font-weight: 800;
     margin-left: 10px;
 }
+/*== CONTACTUS */
+.contact{
+    margin-bottom: 30px;
+}
+
+label{
+    display: block;
+    margin-top: 10px;
+}
+
+input{
+    padding: 10px;
+    width: 260px;
+    border: 1px solid #999;
+    outline: 0px;
+    margin-top: 20px;
+    color: #999
+}
+
+#escever{
+    width:560px;
+}
+
+/*== FOOTER */
+footer{
+    width: 100%;
+    height: 265px;
+    background-color: black;
+}
+
+.footer{
+    max-width: 1114px;
+    height: 100%;
+    margin:auto;
+    display: flex;
+}
+
+.footer-icons{
+    width: 210px;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-i{
+    width: 300px;
+    margin-bottom: 40px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer-i h1{
+    color:white;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.footer-i h1 img{
+    width: 10px;
+    height: auto;
+}
+
+.footer-icons a{
+    display: inline-flex;
+    width: 25px;
+    height: 25px;
+    background-color: #373737;
+    justify-content: center;
+    align-items: center;
+    border-radius: 13px;
+    margin-right: 10px;
+}
+
+.footer-icons a:hover{
+    background-color: var(--color-orange);
+}
+
+.footer-text{
+    width: 370px;
+    margin-bottom: 40px;
+    margin-top: 30px;
+}
+
+.footer-text .text{
+    color: #999;
+    max-width: 360px;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.footer-text2{
+    width: 370px;
+    margin-bottom: 40px;
+    margin-top: 30px;
+    margin: auto;
+}
+
+.footer-text2 .box{
+    background-color: #373737;
+    width: 350px;
+    height: 190px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box h1{
+    color: #999;
+    font-size: 12px;
+    line-height: 22px;
+    text-transform: uppercase;
+}
+
+.box span{
+    display: inline-flex;
+    width: 220px;
+    height: 3px;
+    background-color: #ccc;
+    margin-top: 10px;
+}
