--- a/assets/style.css
+++ b/assets/style.css
@@ -880,6 +880,52 @@ input{
     width:560px;
 }
 
+/*== MAP */
+.section-map{
+    background-image: url('../assets/images/mapa.jpg');
+    background-size: cover;
+    background-position: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.section-map--area{
+    width: 100vw;
+    max-width: 1114px;
+    margin: auto;
+}
+
+.section-map-info{
+    width: 50%;
+    padding: 30px;
+    background-color: white;
+    color: black;
+}
+
+.section-mp-info-item{
+    display: flex;
+    align-items: center;
+    color: #999;
+    margin-bottom: 10px;
+}
+
+.section-mp-info-item-img{
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    background-color:#999 ;
+    border-radius: 15px;
+    margin-right: 15px;
+}
+
+.section-mp-info-item img{
+    width: 15px;
+    height: auto;
+}
+
 /*== FOOTER */
 footer{
     width: 100%;
