--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,10 @@ header{
     justify-content: flex-end;
 }
 
+.menu-opener{
+    display: none;
+}
+
 .menu ul,
 .menu li{
     list-style: none;
@@ -795,6 +799,13 @@ header{
     margin-right: 30px;
 }
 
+.icon-area{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 500px;
+}
+
 .icon-a--img{
     display: flex;
     align-items: center;
@@ -1026,4 +1037,389 @@ footer{
     height: 3px;
     background-color: #ccc;
     margin-top: 10px;
+}
+
+/*== MEDIA */
+@media (min-width:450px) and (max-width:1000px){
+
+    .logo{
+        margin-left: 50px;
+    }
+
+    .menu-opener{
+        display: block;
+        width: 40px;
+        margin-right: 50px
+    }
+
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba( 0, 0, 0, 0.9);
+        width: 60vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0px;
+    }
+
+    .menu ul{
+        flex-direction: column;
+    }
+
+    .menu li a{
+        font-weight: bold;
+        font-size: 27px;
+        height: 80px;
+        margin-left: 50px;
+        border: 0;
+    }
+
+    .menu li.active a,
+    .menu li a:hover{
+        border: 0;
+        color: var(--color-orange);
+    }
+
+    .section-aboutus{
+        flex-direction: column;
+    }
+
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+
+    .section-aboutus--right{
+        width: auto;
+    }
+
+    .section-services{
+        flex-wrap: wrap;
+    }
+
+    .section-service{
+        min-width: 50%;
+        margin-bottom: 50px;
+    }
+    
+    .service:first-child{
+        border: 0;
+    }
+
+    .section-team{
+        max-width: 580px;
+    }
+
+    .section-client--text{
+        max-width: 600px;
+    }
+
+    .sponsors{
+        max-width: 700px;
+        justify-content: center;
+    }
+
+    .sponsor{
+        height: auto;
+    }
+
+    .section-price{
+        flex-wrap: wrap;
+        justify-content: center;
+        height: auto;
+    }
+
+    .section-price--cards,
+    .section-price--cards:first-child{
+        margin: 20px 20px 20px 20px;
+    }
+
+    .section-premium--texts {
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    .box-box{
+        flex-direction: column;
+        align-items: center;
+    }
+    .section-premium--box{
+        width: 360px;
+        text-align: center;
+        margin-bottom: 50px;
+        margin-left: 30px;
+    }
+
+    .section-some-facts{
+        flex-wrap: wrap;
+    }
+
+    .section-facts{
+        min-width: 50%;
+        margin-bottom: 50px;
+    }
+
+    .section-map-info{
+        width: auto;
+    }
+
+    .section-map--area{
+        width: auto;
+    }
+
+    .section-map{
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+
+    .section-mp-info-item{
+        margin-bottom: 20px;
+    }
+
+    .section-mp-info-item:last-child{
+        margin-bottom: 0;
+    }
+
+    footer{
+        height: auto;
+    }
+
+    .footer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .box{
+        margin-bottom: 50px;
+    }
+}
+
+/*== MEDIA 400 ==*/
+@media (max-width:450px){
+
+    .logo{
+        margin-left: 50px;
+    }
+
+    .menu-opener{
+        display: block;
+        width: 40px;
+        margin-right: 50px
+    }
+
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba( 0, 0, 0, 0.9);
+        width: 70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0px;
+    }
+
+    .menu ul{
+        flex-direction: column;
+    }
+
+    .menu li a{
+        font-weight: bold;
+        font-size: 20px;
+        height: 60px;
+        margin-left: 30px;
+        border: 0;
+    }
+
+    .menu li.active a,
+    .menu li a:hover{
+        border: 0;
+        color: var(--color-orange);
+    }
+
+    .banner h1{
+        font-size: 30px;
+        line-height: 40px;
+    }
+
+    .banner h2{
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    .section-aboutus{
+        flex-direction: column;
+    }
+
+    .section-aboutus--right img{
+        width: 380px;
+    }
+
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+
+    .section-aboutus--right{
+        width: auto;
+    }
+
+    .section-services{
+        flex-wrap: wrap;
+    }
+
+    .section-service{
+        min-width: 100%;
+        margin-bottom: 50px;
+    }
+    
+    .service:first-child{
+        border: 0;
+    }
+
+    .section-team{
+        max-width: 280px;
+    }
+
+    .section-projects--filters{
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    .section-project--photo{
+        width: 320px;
+    }
+
+    .section-projects--photoarea {
+        width: 300px;
+        height: 160px;
+    }
+
+    .section-client--text{
+        max-width: 360px;
+    }
+
+    .sponsors{
+        max-width: 700px;
+        justify-content: center;
+    }
+
+    .sponsor{
+        height: auto;
+    }
+
+    .section-price{
+        flex-wrap: wrap;
+        justify-content: center;
+        height: auto;
+    }
+
+    .section-price--cards,
+    .section-price--cards:first-child{
+        margin: 20px 20px 20px 20px;
+    }
+
+    .section-premium--texts {
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+
+    .box-box{
+        flex-direction: column;
+        align-items: center;
+    }
+    .section-premium--box{
+        width: 360px;
+        text-align: center;
+        margin-bottom: 50px;
+        margin-left: 30px;
+    }
+
+    .section-some-facts{
+        flex-wrap: wrap;
+    }
+
+    .section-facts{
+        min-width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .tell img{
+        display: none;
+    }
+
+    .tell h1{
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    .icon p{
+        margin-right: 10px;
+    }
+
+    .icon-area{
+        display: flex;
+    }
+
+    .social{
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .section-social{
+        margin-top: 30px;
+        flex-direction: column;
+    }
+
+    .section-map-info{
+        width: auto;
+    }
+
+    .section-map--area{
+        width: auto;
+    }
+
+    .section-map{
+        padding: 0;
+        padding-bottom: 250px;
+    }
+
+    .section-mp-info-item{
+        margin-bottom: 20px;
+    }
+
+    .section-mp-info-item:last-child{
+        margin-bottom: 0;
+    }
+
+    footer{
+        height: auto;
+    }
+
+    .footer{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .box{
+        margin-bottom: 50px;
+    }
+
+    .footer-i{
+        align-items: center;
+    }
+
+    .footer-text2 .box{
+        width: auto;
+    }
+
+    .footer-text{
+        width: 300px;
+    }
 }
